Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141219

qt_add_qml_module's relative IMPORT_PATH doesn't satisfy qmlls

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.10.1, 6.11.0 Beta3
    • 6.10.0
    • QML: Tooling
    • None
    • 5ab9a15ef (dev), dee5d3f4d (6.10)

      The attached project does this

      IMPORT_PATH
              mods/core/qml/modules
      

      in order to satisfy tooling, following the advice given here. However, qmlls still complains:

      It is visible in the generated .qmlls.ini (albeit a relative path, where everything else is absolute):

      [General]
      buildDir="/Users/mitch/dev/temp/cmakedeploytest-qt_isle_debug_non_fw-Debug/app"
      no-cmake-calls=false
      docDir=/Users/mitch/dev/qt-isle-debug-non-fw/qtbase/doc
      importPaths="mods/core/qml/modules:/Users/mitch/dev/temp/cmakedeploytest-qt_isle_debug_non_fw-Debug/isle:/Users/mitch/dev/qt-isle-debug-non-fw/qtbase/qml"
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sami.shalayel Sami Shalayel
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes