qmlls: support relative import paths just like qmllint does

Support relative import paths in qmlls.build.ini and .qmlls.ini files.
Add a helper function in QQmlToolingSettings that takes care of
resolving paths, and use it in qmlls. A later commit will also use it
when loading .qmllint.ini files.

Fixes: QTBUG-141219
Pick-to: 6.10
Change-Id: Idc22ac07f7aa9910f7e5a6ca51115a457a909fa6
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>